# SimpleBluez

./: CHANGELOG.md  CMakeLists.txt  README.md  README.rst  conanfile.py
.github/workflows/: ci_test.yml
cmake/find/: Findsimpledbus.cmake
docs/: api.rst  changelog.rst  security.rst  usage.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree  installation.doctree  security.doctree  usage.doctree
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  security.html  usage.html
docs/_build/html/_sources/: changelog.rst.txt
examples/: CMakeLists.txt
examples/ble_nus/: CMakeLists.txt  ble_nus.cpp
examples/connect/: CMakeLists.txt  connect.cpp
examples/list_adapters/: CMakeLists.txt  list_adapters.cpp  main.cpp
examples/list_paired/: CMakeLists.txt
examples/manuf_data/: CMakeLists.txt  main.cpp
examples/notify/: CMakeLists.txt  notify.cpp
examples/pair/: CMakeLists.txt  pair.cpp
examples/read/: CMakeLists.txt  read.cpp
examples/scan/: CMakeLists.txt  scan.cpp
include/simplebluez/: Adapter.h  Agent.h  Bluez.h  Characteristic.h  Device.h  Logging.h  ProxyOrg.h  ProxyOrgBluez.h  Service.h
include/simplebluez/interfaces/: Adapter1.h  Agent1.h  Battery1.h  Device1.h  GattCharacteristic1.h  GattDescriptor1.h  GattService1.h
scripts/: build_examples.sh  build_standalone.sh
src/: Adapter.cpp  Agent.cpp  Bluez.cpp  BluezAdapter.cpp  BluezAdapter.h  BluezAgent.h  BluezDevice.cpp  BluezDevice.h  BluezGattCharacteristic.cpp  BluezGattCharacteristic.h  BluezGattService.cpp  BluezGattService.h  BluezService.h  Characteristic.cpp  Descriptor.cpp  Device.cpp  Exceptions.cpp  ProxyOrg.cpp  ProxyOrgBluez.cpp  Service.cpp
src/interfaces/: Adapter1.cpp  Adapter1.h  Agent1.cpp  Battery1.cpp  Device1.cpp  Device1.h  GattCharacteristic1.cpp  GattCharacteristic1.h  GattDescriptor1.cpp  GattService1.cpp  GattService1.h
src/legacy/: Adapter1.cpp  Adapter1.h  BluezAdapter.h  BluezDevice.h  BluezGattCharacteristic.cpp  BluezGattCharacteristic.h  BluezGattService.h  BluezService.cpp  BluezService.h  Device1.h  GattCharacteristic1.h  GattService1.h
test/: CMakeLists.txt
